Edited Projects and Publications

--- a/src/students.html
+++ b/src/students.html
@@ -59,7 +59,7 @@
           <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2">
             <ul>
               <li>
-                <a href="https://gameofthrones.fandom.com/wiki/Viserys_Targaryen">Viserys Targaryen</a> (Post-Doc at School of Thornes, Main Supervisor)
+                <a href="https://gameofthrones.fandom.com/wiki/Viserys_Targaryen">Rachele Maria Nebbia Colomba</a> (Post-Doc at School of Drama and Litereture)
               </li>
               <li>
                 <a href="https://gameofthrones.fandom.com/wiki/Daenerys_Targaryen">Daenerys Targaryen</a> (Research Associate at School of Thornes, Main Supervisor)
