--- a/src/index.html
+++ b/src/index.html
@@ -56,17 +56,18 @@
       <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
           <div class="row">
               <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-                  <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 50%;">
-                      <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/avatar.png" class="mbr-figure__img"></figure>
+                  <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 40%;">
+                      <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/avatar.jpg" class="mbr-figure__img"></figure>
                   </div>
                   <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__right">
                       <div class="mbr-section__container mbr-section__container--middle">
                           <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                              <h3 class="mbr-header__text">Jon Snow</h3>
+                              <h3 class="mbr-header__text">Wenxi Wu</h3>
                           </div>
                       </div>
                       <div class="mbr-section__container mbr-section__container--middle">
                           <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
+                            <!--
                             <p>
                               <b>Jon Snow</b>, born <b>Aegon Targaryen</b>, is the son of <a href="https://gameofthrones.fandom.com/wiki/Lyanna_Stark">Lyanna Stark</a> and <a href="https://gameofthrones.fandom.com/wiki/Rhaegar_Targaryen">Rhaegar Targaryen</a>, the late <a href="https://gameofthrones.fandom.com/wiki/Prince_of_Dragonstone">Prince of Dragonstone</a>. From infancy, Jon is presented as the <a href="https://gameofthrones.fandom.com/wiki/Bastardy">bastard</a> son of <a href="https://gameofthrones.fandom.com/wiki/Eddard_Stark">Lord Eddard Stark</a>, Lyanna's brother, and raised alongside his lawful children at <a href="https://gameofthrones.fandom.com/wiki/Winterfell">Winterfell</a>, the seat of <a href="https://gameofthrones.fandom.com/wiki/House_Stark">House Stark</a>. However, his true parentage is kept secret from everyone, including Jon himself, in order to protect him from those that sought the complete annihilation of <a href="https://gameofthrones.fandom.com/wiki/House_Targaryen">House Targaryen</a> after <a href="https://gameofthrones.fandom.com/wiki/Robert%27s_Rebellion">Robert's Rebellion</a> and to maintain order in the <a href="https://gameofthrones.fandom.com/wiki/Seven_Kingdoms">realm</a>.
                             </p>
@@ -81,6 +82,12 @@
                               <a href="https://orcid.org" style="background-color: rgb(255, 255, 255);">ORCID</a>
                               , &nbsp;
                               <a href="https://www.researchgate.net" style="background-color: rgb(255, 255, 255);">Research Gate</a>
+                            </p>-->
+                            <p>
+                            I am a Master student in Electrical Engineering and Information Technology at the Technical University of Munich. I am currently doing research internship at the Munich Institute of Robotics and Machine Intelligence，advised by Dr. Luis Figueredo. 
+                            </p>
+                            <p>
+                              My research interest lies in robot motion planning and obstacle avoidance. My previous research was about robot motion planning by using a single demonstration, reactive obstacle avoidance in real time, and time-optimal path planning under safety constraints. The work was validated on Franka Emika Panda and Universal Robots UR5. 
                             </p>
                           </div>
                       </div>
