--- a/src/projects.html
+++ b/src/projects.html
@@ -57,7 +57,7 @@
             <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__left">
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                  <h3 class="mbr-header__text">Stabilization of the Humanoid Robot NAO</h3>
+                  <h3 class="mbr-header__text">User-guided Constrianed Motion Planning with Reactive Obstacle Avoidance</h3>
                 </div>
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
@@ -72,7 +72,7 @@
               <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/banner001.png" class="mbr-figure__img"></figure>
             </div>-->
             <iframe width="480" height="325"
-            src="https://www.youtube.com/embed/HniDh8tXCPg">
+            src="https://www.youtube.com/embed/o2DvE4i7nKg">
             </iframe> 
 
             
@@ -85,17 +85,18 @@
       <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
           <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-            <!--
+            
             <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 50%;">
-              <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/banner002.png" class="mbr-figure__img"></figure>
-            </div>-->
+              <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/s_star.png" class="mbr-figure__img"></figure>
+            </div>
+            <!--
             <iframe width="480" height="325"
             src="https://www.youtube.com/embed/Tu-xOGkm7GM"> allow="accelerometer
-            </iframe> 
+            </iframe> -->
             <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__right">
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                  <h3 class="mbr-header__text">Gesture-controlled Car with Obstacle Avoidance</h3>
+                  <h3 class="mbr-header__text">S*: A Solution to the Safety-Performance Tradeoff in Robot Motion Planning</h3>
                 </div>
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
