change readme url

--- a/src/projects.html
+++ b/src/projects.html
@@ -101,7 +101,7 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;
+                  <p>This safety-aware time-optimal planner relies on a modified version of A* algorithm embedding the concepts of safe motion unit from our previous research. This work, instead, proposes solving the time-optimal approach explicitly embedding safety-constraints in a time-optimal-path-graph-search approach which combines both safety-constraints in terms of maximum-velocity (a function of the reflected mass) and joint-limit capabilities. Our planner therefore produces an efficient time-optimal manipulation plan by choosing trajectories that lead to reduced reflected mass -- and therefore higher safety velocities The proposed approach simplifies the safety time-optimal trade-off been suitable for online implementation. &nbsp;
                   </p>
                 </div>
               </div>
