add project description

--- a/src/projects.html
+++ b/src/projects.html
@@ -62,7 +62,7 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;</p>
+                  <p>This is an approach to generating real-time motion plans for point-to-point tasks using a single successful human demonstration. The motion generation is based on screw linear interpolation, which allows us to respect the underlying geometric constraints that characterize the task and are implicitly present in the demonstration. An original reactive collision avoidance algoriothm is integrated in the planner. The Rapidly Expanding Plane-oriented Escaping Trees (REPET) algorithm enables the robot to generate the path to avoid obstacles in real time.&nbsp;</p>
                 </div>
               </div>
               
@@ -126,7 +126,7 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;</p>
+                  <p>This project adds a stabilization by stepping functionality to the NAO RoboCup HULKs framework. The NAO robot is therefore modeled as linearized inverted pendulum. The implemented stabilization strategy is based on the capture point theory and added to the walking generator of the HULKs framework. In experiments in simulation (Simrobot) and on the real NAO robot the capture point stepping is verified. The results show a higher stability when being pushed for the enabled stepping stabilization compared to the disabled case.&nbsp;</p>
                 </div>
               </div>
               
@@ -164,7 +164,7 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&nbsp;
+                  <p>The motivation for this project was to design a vehicle that can be used by disabled people. A vehicle that can be controlled by different hand gestures of the human is designed in this project. The hand tilt is captured by the IMU sensor on the glove. Then, the command is sent through telecommulication module to the controller, thus controlling the moving velocity and direction of the robot car. The Infrared sensors enable the car to stop automatically when there are obstacles in the way.&nbsp;
                   </p>
                 </div>
               </div>
