change teaching pic and contact info

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                                   <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
                                 </li>
                                 <li class="mbr-navbar__item">
-                                  <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">WORKSHOPS/TUTORIALS</a>
+                                  <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                                 </li>
                               </ul>                            
                               
@@ -84,10 +84,10 @@
                               <a href="https://www.researchgate.net" style="background-color: rgb(255, 255, 255);">Research Gate</a>
                             </p>-->
                             <p>
-                            I am a Master student in Electrical Engineering and Information Technology at the Technical University of Munich. I am currently doing research internship at the Munich Institute of Robotics and Machine Intelligence，advised by Dr. Luis Figueredo. 
+                            I am a Master student in Electrical Engineering and Information Technology at the Technical University of Munich. I am currently doing research internship at the Munich Institute of Robotics and Machine Intelligence，advised by <a href="https://www.mirmi.tum.de/mirmi/research/researchers/mirmi-researcher-list/figueredo-luis/"> Dr. Luis Figueredo </a>. 
                             </p>
                             <p>
-                              My research interest lies in robot motion planning and obstacle avoidance. My previous research was about robot motion planning by using a single demonstration, reactive obstacle avoidance in real time, and time-optimal path planning under safety constraints. The work was validated on Franka Emika Panda and Universal Robots UR5. 
+                              My research interest lies in <b>robot motion planning</b> and <b>obstacle avoidance</b>. My previous research was about robot motion planning by using a single demonstration, reactive obstacle avoidance in real time, and time-optimal path planning under safety constraints. The work was validated on Franka Emika Panda and Universal Robots UR5. 
                             </p>
                           </div>
                       </div>
