--- a/src/projects.html
+++ b/src/projects.html
@@ -39,7 +39,7 @@
                       <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
                     </li>
                     <li class="mbr-navbar__item">
-                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">WORKSHOPS/TUTORIALS</a>
+                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                     </li>
                   </ul>
                 </div>
@@ -101,7 +101,7 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>This safety-aware time-optimal planner relies on a modified version of A* algorithm embedding the concepts of safe motion unit from our previous research. This work, instead, proposes solving the time-optimal approach explicitly embedding safety-constraints in a time-optimal-path-graph-search approach which combines both safety-constraints in terms of maximum-velocity (a function of the reflected mass) and joint-limit capabilities. Our planner therefore produces an efficient time-optimal manipulation plan by choosing trajectories that lead to reduced reflected mass -- and therefore higher safety velocities The proposed approach simplifies the safety time-optimal trade-off been suitable for online implementation. &nbsp;
+                  <p>The safety-aware time-optimal planner relies on a modified version of A* algorithm embedding the concepts of safe motion unit from our previous research. This work, instead, proposes solving the time-optimal approach explicitly embedding safety-constraints in a time-optimal-path-graph-search approach which combines both safety-constraints in terms of maximum-velocity (a function of the reflected mass) and joint-limit capabilities. Our planner therefore produces an efficient time-optimal manipulation plan by choosing trajectories that lead to reduced reflected mass -- and therefore higher safety velocities The proposed approach simplifies the safety time-optimal trade-off been suitable for online implementation. &nbsp;
                   </p>
                 </div>
               </div>
