--- a/src/students.html
+++ b/src/students.html
@@ -36,7 +36,7 @@
                       <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
                     </li>
                     <li class="mbr-navbar__item">
-                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">WORKSHOPS/TUTORIALS</a>
+                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                     </li>
                   </ul>
                 </div>
