--- a/src/teaching.html
+++ b/src/teaching.html
@@ -38,7 +38,7 @@
                       <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
                     </li>
                     <li class="mbr-navbar__item">
-                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">WORKSHOPS/TUTORIALS</a>
+                      <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                     </li>
                   </ul>
                 </div>
@@ -52,8 +52,9 @@
       <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
           <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-            <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 50%;">
-              <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--low-width"><img src="images/university.png" class="mbr-figure__img" width="750px"></figure>
+            <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 40%;">
+              <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--low-width"><img src="images/tum.jpg" class="mbr-figure__img" width="750px"></figure>
+              <p>Source: https://kunstareal.de/haeuser-und-institutionen/hochschulen/tum-technische-universitaet-muenchen</p>
             </div>
             <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__right">
               <div class="mbr-section__container mbr-section__container--middle">
