--- a/src/workshops-tutorials.html
+++ b/src/workshops-tutorials.html
@@ -27,7 +27,7 @@
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="publications.html">PUBLICATIONS</a></li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="teaching.html">TEACHING</a></li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a></li>
-                    <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="WorkshopsTutorials.html">WORKSHOPS/TUTORIALS</a></li>
+                    <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="WorkshopsTutorials.html">CONTACT</a></li>
                   </ul>
                 </div>
               </nav>
@@ -38,19 +38,22 @@
     </section>
     <section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section>
     <section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="content5-47" data-rv-view="269" style="background-color: rgb(255, 255, 255);">
-      <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
+      <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 3px;">
         <div class="mbr-header mbr-header--wysiwyg row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h3 class="mbr-header__text">Workshops</h3>
+            <h3 class="mbr-header__text">CONTACT</h3>
           </div>
         </div>
       </div>
-      <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
+      <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 3px;">
         <div class="row">
           <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2">
             <ul>
+              
+              <!--
               <li><a href="https://cs.adelaide.edu.au/~dlmia4/">Game of Thrones Photoshop Workshop</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. HackCville, 2019.</li>
               <li><a href="https://www.magiccon.de/en/about/history/magiccon-2-workshops/game-of-thrones-frisuren/">Game of Thrones Hairstyles</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. MagicCon, 2017.</li>
+              -->
             </ul>
           </div>
         </div>
@@ -60,7 +63,7 @@
       <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
           <div class="col-sm-8 col-sm-offset-2">
-            <h3 class="mbr-header__text">Tutorials</h3>
+            <h3 class="mbr-header__text"></h3>
           </div>
         </div>
       </div>
@@ -68,8 +71,12 @@
         <div class="row">
           <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2">
             <ul>
+              <li> Email: wenxi.wu@tum.de </li>
+              <li> Phone: +49 1748718390</li>
+              <!--
               <li><a href="https://www.youtube.com/watch?v=FZeKTHHHERI" style="background-color: rgb(239, 239, 239);">Game of Thrones Photoshop Tutorial</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Photoshop Training Channel, 2014.<br></li>
               <li><a href="https://www.youtube.com/watch?v=3ByxD3IdMHQ" style="background-color: rgb(239, 239, 239);">Iconic Game of Thrones Hairstyles - Hair Tutorial</a>. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 4 Iconic.<br></li>
+              -->
             </ul>
           </div>
         </div>
