removed student page and changed bottom sections

--- a/src/projects.html
+++ b/src/projects.html
@@ -35,9 +35,10 @@
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="teaching.html">TEACHING</a>
                     </li>
+                    <!--
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
-                    </li>
+                    </li>-->
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                     </li>
@@ -189,10 +190,10 @@
                 <br>
                 Email: wenxi.wu@tum.de
                 <br>
+                Phone: +49 1748718390
+                
                 <br>
-                Copyright &copy; <a href="http://oppr.io/">oppr</a> 2019
-                <br>
-                Proudly Powered by <a href="http://oppr.io/">oppr</a> <span>&nbsp;&#8226;&nbsp;</span> Developed by <a href="http://dev.oppr.io/">opprDev</a>
+                
               </p>
           </div>
         </div>
