--- a/src/teaching.html
+++ b/src/teaching.html
@@ -33,10 +33,11 @@
                     </li>
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="teaching.html">TEACHING</a>
+                    <!--
                     </li>
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a>
-                    </li>
+                    </li>-->
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="workshops-tutorials.html">CONTACT</a>
                     </li>
@@ -92,19 +93,16 @@
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 36.9px; padding-bottom: 36.9px;">
           <div class="col-sm-12">
               <p class="mbr-footer__copyright">
-                ADDRESS
-                <br>
-                Winterfell
-                <br>
+                
                 <br>
                 CONTACT
                 <br>
-                Email: jon.snow@winterfell.got
+                Email: wenxi.wu@tum.de
+                <br>
+                Phone: +49 1748718390
                 <br>
                 <br>
-                Copyright &copy; <a href="http://oppr.io/">oppr</a> 2019
-                <br>
-                Proudly Powered by <a href="http://oppr.io/">oppr</a> <span>&nbsp;&#8226;&nbsp;</span> Developed by <a href="http://dev.oppr.io/">opprDev</a>
+                
               </p>
           </div>
         </div>
