--- a/src/workshops-tutorials.html
+++ b/src/workshops-tutorials.html
@@ -26,7 +26,9 @@
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="projects.html">PROJECTS</a></li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="publications.html">PUBLICATIONS</a></li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="teaching.html">TEACHING</a></li>
+                    <!--
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="students.html">STUDENTS</a></li>
+                    -->
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="WorkshopsTutorials.html">CONTACT</a></li>
                   </ul>
                 </div>
@@ -87,6 +89,7 @@
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 36.9px; padding-bottom: 36.9px;">
           <div class="col-sm-12">
               <p class="mbr-footer__copyright">
+                <!--
                 ADDRESS
                 <br>
                 Winterfell
@@ -94,12 +97,11 @@
                 <br>
                 CONTACT
                 <br>
-                Email: jon.snow@winterfell.got
+                Email: wenxi.wu@tum.de
                 <br>
-                <br>
-                Copyright &copy; <a href="http://oppr.io/">oppr</a> 2019
-                <br>
-                Proudly Powered by <a href="http://oppr.io/">oppr</a> <span>&nbsp;&#8226;&nbsp;</span> Developed by <a href="http://dev.oppr.io/">opprDev</a>
+                Phone: +49 1748718390
+                <br>-->
+                
               </p>
           </div>
         </div>
