Fixed format and typo

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
            
                     </li>
                     <li>
-                      <p>Riddhiman Laha*, <b>Wenxi Wu*</b>, Ruiai Sun*, Nico Mansfeld*, Luis F.C. Figueredo* and Sami Haddadin. <b> S*: A Solution to the Safety-Performance Tradeoff in Robot Motion Planning </b>. Submitted to 2022 IEEE International Conference on Intelligent Robots and Systems (IROS). (All authors contributed equally) [<a href="">pdf</a>]</p>
+                      <p>Riddhiman Laha*, <b>Wenxi Wu*</b>, Ruiai Sun*, Nico Mansfeld*, Luis F.C. Figueredo* and Sami Haddadin. <b> S*: A Solution to the Safety-Performance Tradeoff in Robot Motion Planning </b>. Submitted to 2022 IEEE International Conference on Intelligent Robots and Systems (IROS). (*Authors contributed equally) [<a href="">pdf</a>]</p>
                     </li>
 
                   </ul>
