--- a/src/publications.html
+++ b/src/publications.html
@@ -64,7 +64,7 @@
             <p>Riddhiman Laha*, Ruiai Sun*, <b>Wenxi Wu*</b>, Dasharadhan Mahalingam,  Nilanjan Chakraborty, Luis F.C. Figueredo*, Sami Haddadin. <b>Coordinate Invariant User-Guided Constrained Path Planning with Reactive Obstacle Avoidance</b>. Accepted. To be presented on 2022 IEEE International Conference on Robotics and Automation (ICRA). (* Authors contributed equally) [<a href="https://drive.google.com/file/d/1Tf6bpP8PW1jqzXJtkD7pd9lSxHMUFsrM/view?usp=sharing">pdf</a>]</p>
             
             
-            <p>Riddhiman Laha*, <b>Wenxi Wu*</b>, Ruiai Sun*, Nico Mansfeld*, Luis F.C. Figueredo* and Sami Haddadin. <b> S*: A Solution to the Safety-Performance Tradeoff in Robot Motion Planning </b>. Submitted to 2022 IEEE International Conference on Intelligent Robots and Systems (IROS). (All authors contributed equally) [<a href="">pdf</a>]</p>
+            <p>Riddhiman Laha*, <b>Wenxi Wu*</b>, Ruiai Sun*, Nico Mansfeld*, Luis F.C. Figueredo* and Sami Haddadin. <b> S*: A Solution to the Safety-Performance Tradeoff in Robot Motion Planning </b>. Submitted to 2022 IEEE International Conference on Intelligent Robots and Systems (IROS). (* Authors contributed equally) [<a href="">pdf</a>]</p>
           </div>
         </div>
       </div>
