Enable video full screen

--- a/src/projects.html
+++ b/src/projects.html
@@ -72,7 +72,7 @@
             <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-6 image-size" style="width: 50%;">
               <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/banner001.png" class="mbr-figure__img"></figure>
             </div>-->
-            <iframe width="480" height="325"
+            <iframe width="480" height="325" allowfullscreen="allowfullscreen"
             src="https://www.youtube.com/embed/o2DvE4i7nKg">
             </iframe> 
 
@@ -136,7 +136,7 @@
             <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-6 image-size" style="width: 50%;">
               <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/banner001.png" class="mbr-figure__img"></figure>
             </div>-->
-            <iframe width="480" height="325"
+            <iframe width="480" height="325" allowfullscreen="allowfullscreen"
             src="https://www.youtube.com/embed/HniDh8tXCPg">
             </iframe> 
 
@@ -154,7 +154,7 @@
             <div class="mbr-box__magnet mbr-box__magnet--top-right mbr-section__left col-sm-6 image-size" style="width: 50%;">
               <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width"><img src="images/banner002.png" class="mbr-figure__img"></figure>
             </div>-->
-            <iframe width="480" height="325"
+            <iframe width="480" height="325" allowfullscreen="allowfullscreen"
             src="https://www.youtube.com/embed/Tu-xOGkm7GM"> allow="accelerometer
             </iframe> 
             <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__right">
